# wgpu-gol

./: Cargo.toml
benches/: benchmark.rs
src/: lib.rs  main.rs  render.wgsl  shaders.wgsl  simulation.wgsl
