[package]
name = "wgpu-gol"
version = "0.1.0"
edition = "2024"

[dependencies]
# Disable default features and only use x11 since wayland windows don't seem to
# work in WSL2 (which is where I'm doing most of the development for this).
winit = { version = "0.30.9", default-features = false, features = ["x11"] }
