[package]
name = "wgpu-gol"
version = "0.1.0"
edition = "2024"
default-run = "main"

[lib]
bench = false

[[bin]]
name = "main"
path = "src/main.rs"
bench = false

[[bin]]
name = "tests"
bench = false

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
env_logger = "0.11.8"
pollster = "0.4.0"
rand = "0.9.1"
wgpu = "25.0.0"

# Disable default features and only use x11 since wayland windows don't seem to
# work in WSL2 (which is where I'm doing most of the development for this).
winit = { version = "0.30.9", default-features = false, features = [
    "x11",
    "rwh_06",
] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
